Fix overflow error on topbar on mobile devices

--- a/components/TopBar/topbar.module.css
+++ b/components/TopBar/topbar.module.css
@@ -12,11 +12,11 @@
     text-decoration: none;
     color: #000;
     background-color: #fff;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    transition: background-color .3s ease,color .3s ease;
     border-radius: 6px;
-    min-width: 9ch;
+    min-width: 4ch;
     text-align: center;
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
 .button:hover {
